# XGraph

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: CopyFiles.cmake
src/: CMakeLists.txt
src/GLRenderer/: AppInitializer.cpp  AppInitializer.h  Array.cpp  Array.h  ArrayImpl.h  Arrays.cpp  Arrays.h  BoundingBox.cpp  BoundingBox.h  Buffer.cpp  Buffer.h  BufferObject.cpp  BufferObject.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Camera.cpp  Camera.h  CameraManipulator.cpp  CameraManipulator.h  CubeMap.cpp  CubeMap.h  Depth.cpp  Depth.h  Drawable.cpp  Drawable.h  Event.cpp  Event.h  EventReceiver.cpp  EventReceiver.h  FrameBufferObject.cpp  FrameBufferObject.h  GLFormat.h  GLObejct.cpp  GLObject.h  GLVersion.cpp  GLVersion.h  Geometry.cpp  Geometry.h  GlfwViewer.cpp  (+74 more)
src/GLRenderer/res/shaders/: Base.fs.glsl  Base.vs.glsl  MeshShape.fs.glsl  MeshShape.vs.glsl  PointCloud.fs.glsl  PointCloud.vs.glsl  SkyBox.fs.glsl  SkyBox.vs.glsl  test.vs.glsl
src/GLUtilities/: Initializer.hpp
src/GLUtils/: Initializer.cpp  WglUtils.cpp
src/GLViewer/: AppInitializer.cpp  AppInitializer.h  BrepLoader.cpp  BrepLoader.h  CMakeLists.txt  CoordGenerator.cpp  CoordGenerator.h  CurveGenerator.cpp  CurveGenerator.h  DottedCurve.cpp  DottedCurve.h  MeshCutterVTK.cpp  MeshCutterVTK.h  MeshLoader.cpp  MeshLoader.h  ModelDefs.cpp  ModelDefs.h  Picker.h  PointCloudLoader.cpp  PointCloudLoader.h  Viewer.cpp  Viewer.h  main.cpp
src/StdUtils/: CMakeLists.txt  Environment.cpp  Text.cpp
src/Utilities/: CMakeLists.txt  Environment.h  Resources.h  Text.h
src/VKViewer/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/osgtest/: CMakeLists.txt  test_matrix.cpp
third/glad/include/glad/: glad.h  glad_core.h  glad_wgl.h
third/glad/src/: glad.c  glad_core.c  glad_wgl.c
third/glfw/lib/: glfw3.lib
third/glfw/lib/pkgconfig/: glfw3.pc
third/glm/lib/cmake/glm/: glmConfig.cmake
